--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ log/.zsh_history
 projects.zsh
 custom
 !custom/plugins/example
-!custom/example.zsh
+custom/example.zsh
 *.swp
 !custom/example.zshcache
 cache/
